MLHR-1035 #resolve #comment Squashed commit of the following:
commit 63120727a9b82cc663ec9086fa0292590767a618
Author: Andy Perlitch <andyperlitch@gmail.com>
Date:   Wed Apr 23 09:42:35 2014 -0700

    updated background color for loading gif

commit a8fcf8c4fd697a272b4251e36fe75fe81e1794c6
Author: Andy Perlitch <andyperlitch@gmail.com>
Date:   Wed Apr 23 09:24:29 2014 -0700

    fixed css and dashboardMgr issues

--- a/front/css/main.less
+++ b/front/css/main.less
@@ -1,6 +1,6 @@
 body {
     font-family: "Helvetica Neue", helvetica, arial, sans-serif;
-    background: #ececec;
+    background-color:@background_color;
     min-width:747px;
     font-size: 12px;
 }
@@ -37,7 +37,6 @@ p {
 }
 #main {
     background-color:@active_pane;
-    border:thin solid #ccc;
     overflow:auto;
     width:auto;
 }
